--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,11 @@ TEST_DB_URL=
 TEST_DB_USER=
 TEST_DB_PASSWORD=
 # database
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=dmbdev_agent
-DB_USERNAME=root
+DB_CONNECTION=pgx
+DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=renco-db-test
+DB_USERNAME=postgres
 DB_PASSWORD=developer
 # aes encrypt
 AES_SECRET=
