--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ DB_PORT=5432
 DB_DATABASE=renco-db-test
 DB_USERNAME=postgres
 DB_PASSWORD=developer
+DB_SSL_MODE=disable
 # aes encrypt
 AES_SECRET=
 # token
