feat: add docker-compose dev and logger simplify setup

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 # general app
+APP_NAME=
 APP_ENV=
 APP_HOST=
 APP_PORT=
+
+APP_LOGGER_DEBUG=true
+APP_LOGGER_LEVEL=info #debug | info | warn | error | fatal | panic
 # firebase
 FIREBASE_CREDENTIAL_PATH=
 FIREBASE_VERIFY_PASSWORD_URL=
