chore: remove arg docker build

--- a/.build/Dockerfile
+++ b/.build/Dockerfile
@@ -1,7 +1,5 @@
 FROM golang:1.23 AS builder
 
-ARG BINARY_NAME
-
 WORKDIR /build
 
 COPY . .
@@ -9,11 +7,11 @@ COPY . .
 RUN go mod tidy && go mod download && go mod vendor
 
 ENV CGO_ENABLED=0 GOOS=linux GOARCH=amd64
-RUN go build -ldflags="-s -w" -o ${PROJECT_NAME} .
+RUN go build -ldflags="-s -w" -o renco .
 
 FROM scratch
 
-COPY --from=builder /build/${PROJECT_NAME} /
+COPY --from=builder /build/renco /
 COPY --from=builder /build/config /config
 
 EXPOSE 3001
